# EWS-decoder

./: ews_decoder.py  main.py  pyproject.toml  signal_data.txt  test.ipynb
