[project]
name = "ews-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pyaudio>=0.2.14",
    "pyqt6>=6.9.0",
    "pyqtgraph>=0.13.7",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "wave>=0.0.2",
]
